# llm-gnn-aml-explainability

./: .gitignore  DECISIONS.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artefactos_ligeros/: elliptic_meta.json  h2_fidelidad_resumen_n62.json  h2_recall_resumen.json  ibm_encoders.json  ibm_intentos.csv  ibm_meta.json  memorizacion_entidad.json  tabla_maestra_M05.csv
codigo/: __init__.py  baselines_elliptic.py  baselines_ibm.py  construir_grafo_elliptic.py  construir_grafo_ibm.py  correr_h3.py  eda_elliptic.py  eda_ibm.py  evaluar_explicabilidad.py  extraer_evidencia.py  generar_sar.py  gnn_elliptic.py  gnn_ibm.py  gnn_prop_elliptic.py  gnn_prop_ibm.py  metricas.py  verificar_datasets.py
corpus/: README_corpus.md  h3_corpus_sars.jsonl
tests/: test_metricas.py  test_verificador_sar.py
